// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountIdentities renders empty 1`] = `
<SideEffect(DocumentTitle)
  title="Sentry"
>
  <div>
    <SettingsPageHeading
      title="Identities"
    />
    <Styled(div)>
      <PanelHeader
        disablePadding={true}
      >
        <Box
          px={2}
        >
          Identities
        </Box>
      </PanelHeader>
      <PanelBody
        direction="column"
        disablePadding={true}
        flex={false}
      >
        <Styled(div)>
          There are no identities associated with this account
        </Styled(div)>
      </PanelBody>
    </Styled(div)>
  </div>
</SideEffect(DocumentTitle)>
`;

exports[`AccountIdentities renders list 1`] = `
<SideEffect(DocumentTitle)
  title="Sentry"
>
  <div>
    <SettingsPageHeading
      title="Identities"
    />
    <Styled(div)>
      <PanelHeader
        disablePadding={true}
      >
        <Box
          px={2}
        >
          Identities
        </Box>
      </PanelHeader>
      <PanelBody
        direction="column"
        disablePadding={true}
        flex={false}
      >
        <Row
          align="center"
          key="1"
          p={2}
        >
          <Box
            flex="1"
            p={2}
          >
            Github
          </Box>
          <Box
            p={2}
          >
            <Button
              disabled={false}
              onClick={[Function]}
              size="small"
            >
              Disconnect
            </Button>
          </Box>
        </Row>
      </PanelBody>
    </Styled(div)>
  </div>
</SideEffect(DocumentTitle)>
`;
